# cython-example

./: CMakeLists.txt
cmake/: FindCython.cmake  add_cython_library.cmake  cython.py.in
src/: CMakeLists.txt
src/pyrectangle/: CMakeLists.txt  Rectangle.pxd  rect.pyx
src/rectangle/: CMakeLists.txt  Rectangle.cpp  Rectangle.h
tests/: CMakeLists.txt  test.py
